# ditrigon

./: .dir-locals.el  .gitignore  Doxyfile  Doxyfile.meson.in  errhandling-plan.md  hexchat-gtk4.cmb  meson.build  meson_options.txt  readme.md
.github/workflows/: ubuntu-build.yml
data/: ditrigon.gresource.xml  hexchat.gresource.xml  meson.build
data/icons/: meson.build
data/man/: ditrigon.1.in  meson.build
data/misc/: io.github.Ditrigon.Plugin.metainfo.xml.in  io.github.Ditrigon.appdata.xml.in  io.github.Ditrigon.desktop.in.in  meson.build
data/pkgconfig/: ditrigon-plugin.pc.in  meson.build
data/ui/gtk4/dialogs/: ascii-window.ui  banlist-window.ui  chanlist-window.ui  dcc-chat-window.ui  dcc-file-window.ui  editlist-window.ui  ignore-window.ui  joind-window.ui  notify-add-dialog.ui  notify-window.ui  plugin-window.ui  rawlog-window.ui  servlist-edit-window.ui  servlist-window.ui  text-editor-window.ui  urlgrab-window.ui
data/ui/gtk4/maingui/: adw-nav-split.ui  chat-layout.ui  legacy-content-paned.ui  main-box.ui  userlist-shell.ui  xtext-scroll.ui
data/ui/gtk4/menus/: static-menus.ui
data/ui/gtk4/rows/: chanview-tree-row.ui  two-line-list-row.ui  userlist-row.ui
data/ui/gtk4/setup/: group.ui  page.ui  preferences-window.ui
data/ui/gtk4/setup/rows/: action-row.ui  combo-row.ui  entry-row.ui  switch-row.ui
data/ui/gtk4/styles/: chanview-tree.css  maingui.css  userlist.css
plugins/: meson.build
plugins/fishlim/: dh1080.c  fish.c  plugin_hexchat.c
plugins/perl/: perl.c
plugins/sysinfo/: meson.build
plugins/sysinfo/unix/: parse.c
po/: POTFILES  POTFILES.skip  meson.build
src/: meson.build
src/common/: cfgfiles.c  chanopt.c  chanopt.h  ctcp.c  ctcp.h  dcc.c  fe.h  hexchat-plugin.h  hexchat.c  hexchat.h  ignore.c  inbound.c  inbound.h  network.c  notify.c  outbound.c  plugin.c  proto-irc.c  proto-irc.h  scram.c  server.c  servlist.c  ssl.c  text.c  url.c  userlist.h  util.c  util.h
src/common/dbus/: dbus-client.c  example.c  example.py  meson.build  org.ditrigon.service.service.in
src/fe-gtk4/: adw.c  ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  custom-list.c  dccgui.c  editlist.c  fe-gtk4.c  fe-gtk4.h  fkeys.c  gtkutil.c  ignoregui.c  joind.c  maingui.c  menu.c  meson.build  notifygui.c  palette.c  palette.h  pixmaps.c  pixmaps.h  plugin-notification.c  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  setup.c  sexy-iso-codes.c  sexy-iso-codes.h  sexy-spell-entry.c  sexy-spell-entry.h  textgui.c  urlgrab.c  userlistgui.c  xtext.c
src/fe-gtk4/notifications/: notification-backend.h  notification-dummy.c  notification-freedesktop.c
tests/: common_security_poc.c  dcc_accept_nick_spoof_security_poc.py  dcc_passive_hijack_security_poc.py  dcc_resume_nick_spoof_security_poc.py  dcc_send_listener_hostname_hijack_security_poc.py  fuzz_parser_smoke.py  meson.build  parser_utf8_truncation_regression.py  safe_strcpy_cfg_utf8_regression.py  servlist_nick_overflow_regression.py
