icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
  'ditrigon.png',
  rename: 'io.github.Ditrigon.png',
  install_dir: join_paths(icondir, '48x48/apps')
)
install_data(
  'ditrigon.svg',
  rename: 'io.github.Ditrigon.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
